V 0.2. Fixed particles effect

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Witcher World</title>
 
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
-    <script src="libs/particles/particles.js"></script>
+    <script src="libs/particles/particles.js" defer></script>
 
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/app.js" defer></script>
@@ -59,7 +59,7 @@
           <canvas
             class="particles slider__layer"
             data-swiper-parallax="20%"
-            data-color="#BE9164"
+            data-color="#525A6D"
           ></canvas>
           <div
             class="slider__layer"
@@ -87,7 +87,7 @@
           <canvas
             class="particles slider__layer"
             data-swiper-parallax="18%"
-            data-color="#BE9164"
+            data-color="#938086"
           ></canvas>
           <div
             class="slider__layer"
