V 0.3. Added favicon. Changed particles colors

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Witcher World</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
 
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
@@ -59,7 +60,7 @@
           <canvas
             class="particles slider__layer"
             data-swiper-parallax="20%"
-            data-color="#525A6D"
+            data-color="#75BAD8"
           ></canvas>
           <div
             class="slider__layer"
@@ -87,7 +88,7 @@
           <canvas
             class="particles slider__layer"
             data-swiper-parallax="18%"
-            data-color="#938086"
+            data-color="#B14F49"
           ></canvas>
           <div
             class="slider__layer"
