--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/app.js" defer></script>
   </head>
   <body>
+    <!-- <h1 class="hero-title">WELCOME TO THE WITCHER WORLD</h1> -->
     <div class="swiper slider">
       <div class="swiper-wrapper slider__wrapper">
         <div class="swiper-slide slider__item">
