V 0.3.2. Fixed favicon for github pages.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Witcher World</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
 
     <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
     <script src="libs/swiper/swiper-bundle.min.js" defer></script>
@@ -14,7 +14,6 @@
     <script src="js/app.js" defer></script>
   </head>
   <body>
-    <!-- <h1 class="hero-title">WELCOME TO THE WITCHER WORLD</h1> -->
     <div class="swiper slider">
       <div class="swiper-wrapper slider__wrapper">
         <div class="swiper-slide slider__item">
